# rgc

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  wheels.yml
examples/: prep.py  rgc_demo.c  rgc_demo.py
src/rgc/: __init__.py  _rgcmodule.c  rgc.c  rgc.h
tests/: test_basic.py
