[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgclib"
version = "0.1.2"
description = "Python wrapper for the C implementation of Recursive Group Coding (RGC)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Mykola Ponomarenko" }
]
keywords = [
  "compression",
  "data-compression",
  "entropy-coding",
  "entropy-coder",
  "information-theory",
  "arithmetic-coding",
  "huffman-coding",
  "compression-library",
  "large-alphabet",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Archiving :: Compression",
]

[project.urls]
Homepage = "https://github.com/mykola-ponomarenko-ua/rgc"
Repository = "https://github.com/mykola-ponomarenko-ua/rgc"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
